# batty

./: .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  USECASES.md  analysis.md  codecov.yml  crates-io-readme-excerpt.md  demo.tape  idea.md  mkdocs.yml  name-staking-checklist.md  phase-summary.md  restart_context.json  review-packet.md
.batty/: config.toml  daemon-state.json  launch-state.json
.batty/assignment_results/: 1774021658.#0M900878000P44689V16777230I18171316.macmini.local,S=2710.json  1774021673.#0M384659000P45544V16777230I18171321.macmini.local,S=3138.json  1774021686.#0M233608000P46355V16777230I18171330.macmini.local,S=2640.json  1774021694.#0M408169000P46774V16777230I18171339.macmini.local,S=2110.json  1774021759.#0M357203000P51025V16777230I18175252.macmini.local,S=2109.json  1774021824.#0M181967000P57952V16777230I18184285.macmini.local,S=3138.json  1774021975.#0M671359000P73548V16777230I18201662.macmini.local,S=2640.json  1774022108.#0M376894000P91165V16777230I18219743.macmini.local,S=2253.json  1774022144.#0M803720000P94778V16777230I18222190.macmini.local,S=1706.json  1774022386.#0M796220000P16683V16777230I18234564.macmini.local,S=3109.json  1774022690.#0M608870000P39800V16777230I18248470.macmini.local,S=2751.json  1774022707.#0M153662000P40587V16777230I18248483.macmini.local,S=2701.json  1774022715.#0M332581000P41152V16777230I18248487.macmini.local,S=2153.json  1774022739.#0M440492000P42379V16777230I18248561.macmini.local,S=2013.json  1774023557.#0M803100000P18762V16777230I18293803.macmini.local,S=1286.json  1774023564.#0M899764000P19395V16777230I18293882.macmini.local,S=1323.json  1774023747.#0M846825000P29526V16777230I18296750.macmini.local,S=2271.json  1774023755.#0M307880000P30062V16777230I18296789.macmini.local,S=1063.json  1774023763.#0M493314000P30690V16777230I18297355.macmini.local,S=1246.json  1774023802.#0M744055000P33379V16777230I18299208.macmini.local,S=853.json  1774024093.#0M226567000P72968V16777230I18339496.macmini.local,S=1618.json  1774024209.#0M835833000P85893V16777230I18350514.macmini.local,S=1443.json  1774024388.#0M285818000P94887V16777230I18356856.macmini.local,S=1294.json  1774024397.#0M583098000P95263V16777230I18356898.macmini.local,S=1490.json  1774024461.#0M167175000P97299V16777230I18357005.macmini.local,S=1839.json  1774024469.#0M318433000P97506V16777230I18357022.macmini.local,S=1610.json  1774024862.#0M323812000P25289V16777230I18380868.macmini.local,S=1754.json  1774024870.#0M661254000P25689V16777230I18380873.macmini.local,S=1536.json  1774025039.#0M37061000P35416V16777230I18384715.macmini.local,S=1584.json  1774025226.#0M962342000P42254V16777230I18386528.macmini.local,S=1969.json  1774025328.#0M897182000P47787V16777230I18388747.macmini.local,S=1981.json  1774059723.#0M669993000P29015V16777230I18488116.macmini.local,S=1371.json  1774059736.#0M245252000P29361V16777230I18488120.macmini.local,S=2667.json  1774060306.#0M115322000P7108V16777230I18537076.macmini.local,S=3194.json  1774060420.#0M658818000P8862V16777230I18537211.macmini.local,S=590.json  1774060428.#0M840480000P8998V16777230I18537214.macmini.local,S=536.json
.batty/kanban/: activity.jsonl
.batty/team_config/: batty_architect.md  batty_engineer.md  batty_manager.md  events.jsonl  kanban-archive.md  kanban.md  team.yaml
.cargo/: config.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs-publish.yml  release.yml  star-milestone.yml
assets/: batty-workflow.md  claude-skill.md  codex-skill.md
docs/: architecture.md  brazil-workspace-worktrees.md  cli-reference.md  config-reference.md  contributing.md  daemon-modules.md  demo.md  getting-started.md  grafana-alerting.md  index.md  interventions.md  orchestrator.md  scheduled-tasks.md  testing.md  troubleshooting.md  workflow-migration.md
docs/new_beginnings/: dimplomacy.md  idea.md  software.md
docs/reference/: cli.md  config.md  environment-variables.md  modules.md  project-registry.schema.json  project-routing-state.schema.json  task-aging-alerts.md
examples/: chess.md
examples/full-team/: README.md  team.yaml
planning/: analysis.md  architecture.md  awesome-list-submissions.md  bugreport-delivery-marker-missing-starting-agents.md  bugreport-lead-inbox-triage-idle.md  bugreport-stuck-messages-after-injection.md  dev-philosophy.md  differentiation.md  discord-interface-strategy.md  execution-loop.md  factory-of-features-analysis.md  idea.md  inbox-control-plane-design.md  issues.md  manager-staging-worktree-design.md  name-staking-checklist.md  openclaw-contract.md  openclaw-project-registry.md  openclaw-project-routing-policy.md  openclaw-supervision-rollout.md  peter-switch-strategy.md  phase-2.4-harness-runbook.md  prd-goal-directed-tui.md  prd-grafana-monitoring.md  project_management.md  roadmap.md  scenario-framework-execution.md  shim-spec.md  supervision-harness-contract.toml  supervisor-hotkey-control-contract.md  tech-stack.md  twit.txt  virtual-organizations.md
poc/agent-shim/: Cargo.toml
poc/agent-shim/src/: chat.rs  classifier.rs  main.rs  protocol.rs  shim.rs
poc/agent-shim/tests/: integration.rs
scripts/: generate-docs.sh  overseer-watch.sh  setup-discord-clawhip.sh
src/: cli.rs  completion.rs  console_pane.rs  dag.rs  detector.rs  env_file.rs  events.rs  install.rs  lib.rs  main.rs  merge_queue.rs  orchestrator.rs  paths.rs  project_registry.rs  release.rs  review.rs  scheduler.rs  sequencer.rs  shell_completion.rs  tier2.rs  tmux.rs  work.rs  worktree.rs
src/agent/: claude.rs  (+4 more)
target-worker2/: .rustc_info.json
tasks/: prd-batty-workflow-control-plane-rework.md  task-396-nether-earth-game-loop.md
tests/: integration_harness.rs  openclaw_contract_harness.rs  scenarios.rs
(+922 files in other folders)
