[package]
name = "batty-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Hierarchical agent command system for software development"
license = "MIT"
repository = "https://github.com/battysh/batty"
homepage = "https://github.com/battysh/batty"
readme = "README.md"
keywords = ["cli", "tmux", "automation", "agent", "kanban"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "batty"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# PTY
portable-pty = "0.8"
term_size = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"

# Pattern matching
regex = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Signal handling
ctrlc = "3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
